Add outline summaries and mind map trees for common traps in value creation
- Introduced outline summary notes for each section to clarify key points.
- Added text mind map trees to visually represent the structure of arguments and traps.
- Enhanced content in Vietnamese and English for consistency across language versions.
- Sections updated include: Common Traps, Syllogism Trap, Often True vs Always True Trap, Correlation and Causation Trap, Confirmation Bias Trap, Survivorship Bias Trap, Emotional Trap, and Thinking Traps.

--- a/pages/writing-opinion/values-creation/6-1-common-traps-in-value-creation-foundation-vn.html
+++ b/pages/writing-opinion/values-creation/6-1-common-traps-in-value-creation-foundation-vn.html
@@ -140,6 +140,81 @@
 			<p>Tư duy đúng không phải là tư duy không bao giờ sai, mà là tư duy biết dừng lại, biết nghi ngờ chính mình, và biết học từ những lần chưa đúng.</p>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+			<ul>
+				<li>Cần nền tảng tư duy để hiểu cơ chế lệch lạc trước khi nói về “cạm bẫy”.</li>
+				<li>Sai lầm là bình thường; đáng sợ là không nhận diện và học từ sai lầm.</li>
+				<li>Con người dễ chọn thuận tiện hơn đúng đắn nếu thiếu tỉnh táo.</li>
+				<li>Không ai đứng ngoài thiên kiến; cần tự chất vấn liên tục.</li>
+				<li>Bước 1: dừng phản xạ để thoát quán tính và kiểm tra giả định.</li>
+				<li>Bước 2: lắng nghe để hiểu đúng vấn đề trước khi phản biện.</li>
+				<li>Bước 3: trì hoãn phán xét; kiên nhẫn giúp nhìn đa chiều.</li>
+				<li>Bước 4: thu thập thông tin; câu hỏi là công cụ phản biện cốt lõi.</li>
+				<li>Nhận diện định kiến và chủ động tìm khác biệt để mở rộng nhận thức.</li>
+				<li>Sai lầm vẫn xảy ra; giá trị nằm ở cách học và chỉnh tư duy.</li>
+				<li>Tư duy chín giúp ngăn sai lệch trước khi thành vấn đề.</li>
+				<li>Rèn luyện trí lực qua tài liệu nền tảng và hiểu thiên kiến nhận thức.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+				<pre class="mm-text-tree">
+6. NHỮNG CẠM BẪY THƯỜNG GẶP TRONG VIỆC TẠO RA GIÁ TRỊ - NỀN TẢNG
+├─ Luận điểm trung tâm
+│  └─ Cần tư duy phản biện, lắng nghe và kiên nhẫn để tránh lệch lạc
+│
+├─ 1) Mục tiêu của phần nền tảng
+│  └─ Hiểu cơ chế tư duy đi chệch hướng trước khi nói về “bẫy”
+│
+├─ 2) Sai lầm là bình thường
+│  └─ Einstein: nhiều kết luận sai → giá trị nằm ở nhận diện và sửa
+│
+├─ 3) Khuynh hướng tự nhiên: tiện hơn đúng
+│  └─ Dễ tin điều quen thuộc, trực giác tức thời → dễ lệch lạc
+│
+├─ 4) Không ai đứng ngoài thiên kiến
+│  └─ Tự chất vấn và thận trọng với kết luận của mình
+│
+├─ 5) Bước 1: dừng phản xạ
+│  ├─ Dừng một nhịp để tự vấn
+│  └─ Chất lượng tư duy = độ chín của suy xét
+│
+├─ 6) Bước 2: lắng nghe
+│  ├─ Lắng nghe để hiểu đúng vấn đề
+│  └─ Điều kiện của tư duy phản biện
+│
+├─ 7) Bước 3: trì hoãn phán xét
+│  ├─ Trực giác là tín hiệu cần kiểm chứng
+│  └─ Kiên nhẫn tạo sáng suốt
+│
+├─ 8) Bước 4: thu thập thông tin & phản biện
+│  ├─ Mở rộng bức tranh nhận thức
+│  └─ Câu hỏi là công cụ quan trọng
+│
+├─ 9) Nhận diện định kiến & tìm khác biệt
+│  ├─ Định kiến khóa tư duy
+│  └─ Khác biệt mở khả năng nhận thức mới
+│
+├─ 10) Sai lầm và cách đối diện
+│  └─ Học từ sai lầm để tinh chỉnh tư duy
+│
+├─ 11) Tư duy chín để ngăn vấn đề
+│  └─ Ngăn sai lệch sớm có giá trị lâu dài
+│
+├─ 12) Tài liệu gợi ý và mục tiêu học
+│  └─ Rèn luyện trí lực và hiểu thiên kiến nhận thức
+│
+└─ 13) Kết
+   └─ Tư duy đúng = biết dừng lại, tự nghi ngờ, học từ sai
+				</pre>
+			</details>
+		</div>
+
 	</section>
 </article>
 <script src="settings.js"></script>
