--- a/pages/writing-opinion/values-creation/6-1-common-traps-in-value-creation-foundation.html
+++ b/pages/writing-opinion/values-creation/6-1-common-traps-in-value-creation-foundation.html
@@ -140,6 +140,81 @@
 			<p>Right thinking is not thinking that never errs, but thinking that knows how to pause, question itself, and learn from what was not yet right.</p>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Outline summary notes</h3>
+			<ul>
+				<li>A thinking foundation is needed to understand how deviations arise before discussing “traps.”</li>
+				<li>Mistakes are normal; the real risk is failing to recognize and learn from them.</li>
+				<li>Humans tend to choose convenience over correctness when not alert.</li>
+				<li>No one stands outside bias; self-questioning must be continuous.</li>
+				<li>Step 1: pause reflexes to escape inertia and check assumptions.</li>
+				<li>Step 2: listen to understand the issue before critiquing it.</li>
+				<li>Step 3: delay judgment; patience enables multi-angle understanding.</li>
+				<li>Step 4: gather information; questions are the core tool of critique.</li>
+				<li>Recognize bias and actively seek difference to expand perception.</li>
+				<li>Mistakes still happen; value lies in learning and refining thinking.</li>
+				<li>Mature thinking helps prevent errors before they become problems.</li>
+				<li>Strengthen intellect with foundational resources and cognitive-bias awareness.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Text mind map (tree)</summary>
+				<pre class="mm-text-tree">
+6. COMMON TRAPS IN VALUE CREATION - FOUNDATION
+├─ Central claim
+│  └─ Critical thinking, listening, and patience prevent deviation
+│
+├─ 1) Purpose of the foundation section
+│  └─ Understand how thinking goes off course before naming “traps”
+│
+├─ 2) Mistakes are normal
+│  └─ Einstein: many wrong conclusions → value is in recognizing and correcting
+│
+├─ 3) Natural tendency: convenience over correctness
+│  └─ Familiarity and intuition can mislead if unchecked
+│
+├─ 4) No one stands outside bias
+│  └─ Ongoing self-questioning is required
+│
+├─ 5) Step 1: pause reflex
+│  ├─ Pause to self-question and escape inertia
+│  └─ Quality of thinking = maturity of reflection
+│
+├─ 6) Step 2: listen
+│  ├─ Listen to understand the issue correctly
+│  └─ A condition for critical thinking
+│
+├─ 7) Step 3: delay judgment
+│  ├─ Intuition is a signal to test
+│  └─ Patience yields clarity
+│
+├─ 8) Step 4: gather information & critique
+│  ├─ Broaden the cognitive picture
+│  └─ Questions are the essential tool
+│
+├─ 9) Recognize bias & seek difference
+│  ├─ Bias locks thinking
+│  └─ Difference opens new possibilities
+│
+├─ 10) Mistakes and how to face them
+│  └─ Learn from errors to refine thinking
+│
+├─ 11) Mature thinking prevents problems
+│  └─ Preventing deviation has long-term value
+│
+├─ 12) Suggested resources and learning goals
+│  └─ Strengthen intellect and understand cognitive biases
+│
+└─ 13) Conclusion
+   └─ Right thinking = pause, self-question, learn from what was not yet right
+				</pre>
+			</details>
+		</div>
+
 	</section>
 </article>
 <script src="settings.js"></script>
