--- a/pages/writing-opinion/values-creation/6-2-0-common-traps-in-value-creation-common-traps-vn.html
+++ b/pages/writing-opinion/values-creation/6-2-0-common-traps-in-value-creation-common-traps-vn.html
@@ -23,6 +23,53 @@
 		  <p>Phần này không hứa giúp bạn tránh mọi sai lầm. Nó chỉ đưa ra một bản đồ—không phải để chỉ đường đúng duy nhất, mà để giúp bạn biết mình đang đứng ở đâu khi tư duy bắt đầu rời khỏi thực tại. Và đôi khi, chỉ cần biết mình đang ở đâu, ta đã có cơ hội quay lại sớm hơn, trước khi phải trả cái giá quá đắt cho những điều tưởng như rất hợp lý.</p>
 		  
 		</section>
+		
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+			<ul>
+				<li>Sau nền tảng tư duy, ta dễ chủ quan rằng mình đã đủ cẩn trọng.</li>
+				<li>Sai lệch tư duy thường xuất hiện dưới dạng hợp lý và thuyết phục.</li>
+				<li>Mục tiêu phần này: làm rõ điểm tư duy trượt đi một cách tự nhiên.</li>
+				<li>Các cạm bẫy liên kết thành chuỗi, củng cố lẫn nhau.</li>
+				<li>Nhận diện cạm bẫy để giữ khoảng cách tỉnh táo với chính mình.</li>
+				<li>Không yêu cầu hoài nghi cực đoan; chỉ cần khả năng dừng lại và điều chỉnh.</li>
+				<li>Phần này như bản đồ: giúp biết mình đang ở đâu khi tư duy rời thực tại.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+				<pre class="mm-text-tree">
+6. CÁC CẠM BẪY THƯỜNG GẶP - GIỚI THIỆU CHUNG
+├─ Luận điểm trung tâm
+│  └─ Tư duy có thể lệch đi một cách hợp lý mà ta không nhận ra
+│
+├─ 1) Sau nền tảng tư duy dễ chủ quan
+│  └─ Cảm giác yên tâm khi đã đủ cẩn trọng
+│
+├─ 2) Sai lệch hiếm khi rõ ràng
+│  └─ Thường xuất hiện dưới dạng kết luận thuyết phục
+│
+├─ 3) Mục tiêu của phần này
+│  └─ Làm rõ những điểm tư duy thường trượt đi tự nhiên
+│
+├─ 4) Cạm bẫy nối tiếp thành chuỗi
+│  └─ Mỗi bẫy củng cố bẫy kế tiếp
+│
+├─ 5) Nhận diện để giữ khoảng cách tỉnh táo
+│  └─ Dừng lại, nhìn lại, điều chỉnh sớm
+│
+├─ 6) Phản ứng người đọc là tự nhiên
+│  └─ Quan trọng là dám quan sát cách kết luận hình thành
+│
+└─ 7) Bản đồ định vị tư duy
+   └─ Biết mình đang ở đâu để quay lại sớm hơn
+				</pre>
+			</details>
+		</div>
 	</article>
 
 	<script src="settings.js"></script>
