--- a/pages/writing-opinion/values-creation/6-2-0-common-traps-in-value-creation-common-traps.html
+++ b/pages/writing-opinion/values-creation/6-2-0-common-traps-in-value-creation-common-traps.html
@@ -21,6 +21,53 @@
 			<p>Identifying these traps is not meant to make us doubt every conclusion, nor to force us into chronic skepticism. Instead, it helps us keep a clear distance from our own thinking—enough to pause, look again, and adjust before small deviations accumulate into large consequences.</p>
 			<p>You may recognize yourself in a few of these traps. You may also think that some of them do not apply to your situation. Both reactions are natural. What matters is not whether you agree or disagree, but whether you are willing to set aside familiar conclusions temporarily and observe how they were formed.</p>
 			<p>This section does not promise to help you avoid every mistake. It only offers a map—not to point to a single correct path, but to help you know where you are when thinking begins to drift away from reality. And sometimes, simply knowing where we are gives us a chance to turn back earlier, before paying too high a price for things that once seemed very reasonable.</p>
+
+			<!-- Outline summary notes -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Outline summary notes</h3>
+				<ul>
+					<li>After a thinking foundation, we can become overconfident that errors will not appear.</li>
+					<li>Thinking distortions often look reasonable and persuasive, so we drift without noticing.</li>
+					<li>This section clarifies where thinking naturally slips, not who is right or wrong.</li>
+					<li>Traps connect in sequence and reinforce one another, forming a hard-to-see chain.</li>
+					<li>Identifying traps keeps a clear distance from our own thinking.</li>
+					<li>The goal is not chronic skepticism, but timely pause and adjustment.</li>
+					<li>This part is a map to locate ourselves when thinking drifts from reality.</li>
+				</ul>
+			</div>
+
+			<!-- Text Mind Map Tree -->
+			<div class="sub-section">
+				<details class="mm-text-tree-details">
+					<summary class="sub-point-1">Text mind map (tree)</summary>
+					<pre class="mm-text-tree">
+6. COMMON TRAPS IN VALUE CREATION - GENERAL INTRODUCTION
+├─ Central claim
+│  └─ Thinking can drift in seemingly reasonable ways without us noticing
+│
+├─ 1) After a foundation, overconfidence can appear
+│  └─ Feeling safe because we are careful and slow
+│
+├─ 2) Distortions are rarely obvious
+│  └─ They appear as persuasive conclusions and past “successful” choices
+│
+├─ 3) Aim of this section
+│  └─ Clarify where thinking naturally slips, not judge right/wrong
+│
+├─ 4) Traps form a chain
+│  └─ Each trap reinforces the next
+│
+├─ 5) Identification keeps distance
+│  └─ Pause, look again, adjust before small deviations grow
+│
+├─ 6) Reader reactions are natural
+│  └─ What matters is observing how conclusions are formed
+│
+└─ 7) A map for locating drift
+   └─ Knowing where we are enables earlier correction
+					</pre>
+				</details>
+			</div>
 		</section>
 	</article>
 
