--- a/pages/writing-opinion/values-creation/6-2-1-common-traps-in-value-creation-common-traps-1-vn.html
+++ b/pages/writing-opinion/values-creation/6-2-1-common-traps-in-value-creation-common-traps-1-vn.html
@@ -118,6 +118,60 @@
 			<p>Hãy thử phân tích các lý luận này dưới góc nhìn của tam đoạn luận. Xác định đại tiền đề và tiểu tiền đề ngầm định, sau đó đánh giá xem chúng có thực sự vững chắc hay không. Qua đó, bạn có thể rèn luyện khả năng tư duy phản biện và tránh rơi vào những cạm bẫy tinh vi trong việc tạo ra giá trị.</p>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+			<ul>
+				<li>Tam đoạn luận dễ đánh đồng “hợp lý” với “sự thật”.</li>
+				<li>Cấu trúc gồm: đại tiền đề, tiểu tiền đề, kết luận.</li>
+				<li>Lập luận đúng phụ thuộc vào tính đúng và phạm vi của các tiền đề.</li>
+				<li>Sai ở đại tiền đề: khái quát hóa quá mức (chim cánh cụt).</li>
+				<li>Sai ở tiểu tiền đề: chấp nhận tuyên bố như thực tế (lợi ích tập thể).</li>
+				<li>Tam đoạn luận rút ngắn ẩn tiền đề, khiến kết luận trông hiển nhiên.</li>
+				<li>Cần truy ngược tiền đề ẩn để kiểm tra tính vững chắc.</li>
+				<li>Thực hành: soi các phát biểu đời thường bằng cấu trúc tam đoạn luận.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+				<pre class="mm-text-tree">
+6. CẠM BẪY TAM ĐOẠN LUẬN
+├─ Luận điểm trung tâm
+│  └─ Hình thức hợp lý có thể che khuất sự thật
+│
+├─ 1) Khi “hợp lý” bị nhầm với “sự thật”
+│  └─ Tư duy muốn mạch lạc → dễ tin kết luận hợp lý
+│
+├─ 2) Tam đoạn luận là gì
+│  ├─ Đại tiền đề (khái quát)
+│  ├─ Tiểu tiền đề (trường hợp cụ thể)
+│  └─ Kết luận (liên kết hai tiền đề)
+│
+├─ 3) Ví dụ đúng trong phạm vi hiện tại
+│  ├─ Con người → phải chết
+│  └─ Đúng vì tiền đề phù hợp tri thức hiện tại
+│
+├─ 4) Sai ở đại tiền đề: khái quát hóa quá mức
+│  ├─ “Tất cả chim biết bay” → chim cánh cụt
+│  └─ Đại tiền đề sai → kết luận sai
+│
+├─ 5) Sai ở tiểu tiền đề: chấp nhận tuyên bố như thực tế
+│  ├─ “Vì lợi ích tập thể” chưa được kiểm chứng
+│  └─ Kết luận đúng hình thức, sai bản chất
+│
+├─ 6) Tam đoạn luận rút ngắn
+│  ├─ Đại tiền đề bị ẩn đi
+│  └─ Cần truy ngược tiền đề để kiểm tra
+│
+└─ 7) Thực hành
+   └─ Soi các “điều hiển nhiên” dưới cấu trúc tam đoạn luận
+				</pre>
+			</details>
+		</div>
+
 	</section>
 </article>
 
