--- a/pages/writing-opinion/values-creation/6-2-1-common-traps-in-value-creation-common-traps-1.html
+++ b/pages/writing-opinion/values-creation/6-2-1-common-traps-in-value-creation-common-traps-1.html
@@ -118,6 +118,60 @@
 			<p>Try to analyze these arguments from the perspective of syllogism. Identify the hidden major and minor premises, then evaluate whether they are truly solid. Through that, you can train critical thinking and avoid falling into subtle traps when creating value.</p>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Outline summary notes</h3>
+			<ul>
+				<li>Syllogisms can confuse “reasonable” form with “truth.”</li>
+				<li>Structure: major premise, minor premise, conclusion.</li>
+				<li>Validity depends on premises being correct and within scope.</li>
+				<li>Error in major premise: overgeneralization (penguins).</li>
+				<li>Error in minor premise: accepting a claim as fact (collective benefit).</li>
+				<li>Shortened syllogisms hide premises and make conclusions seem self-evident.</li>
+				<li>Trace hidden premises to test solidity.</li>
+				<li>Practice: test everyday statements using syllogism structure.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Text mind map (tree)</summary>
+				<pre class="mm-text-tree">
+6. THE SYLLOGISM TRAP
+├─ Central claim
+│  └─ Reasonable form can obscure truth
+│
+├─ 1) When “reasonable” is mistaken for “true”
+│  └─ Coherent arguments can mislead
+│
+├─ 2) What is a syllogism
+│  ├─ Major premise (general)
+│  ├─ Minor premise (specific)
+│  └─ Conclusion (linking premises)
+│
+├─ 3) Correct within current knowledge
+│  ├─ Humans → die
+│  └─ True as long as premises hold
+│
+├─ 4) Error in major premise: overgeneralization
+│  ├─ “All birds can fly” → penguins
+│  └─ Major premise wrong → conclusion wrong
+│
+├─ 5) Error in minor premise: accepting a claim as fact
+│  ├─ “Collective benefit” not verified
+│  └─ Formally valid, materially flawed
+│
+├─ 6) Shortened syllogism
+│  ├─ Major premise hidden
+│  └─ Trace back to test assumptions
+│
+└─ 7) Practice
+   └─ Examine “self-evident” statements with syllogism structure
+				</pre>
+			</details>
+		</div>
+
 	</section>
 </article>
 
