--- a/pages/writing-opinion/values-creation/6-2-2-common-traps-in-value-creation-common-traps-2-vn.html
+++ b/pages/writing-opinion/values-creation/6-2-2-common-traps-in-value-creation-common-traps-2-vn.html
@@ -69,6 +69,54 @@
 			<p>Đọc từng nhận định một cách chậm rãi, và tự hỏi: điều gì trong các lập luận trên là thường đúng, và điều gì đang được ngầm xem như luôn luôn đúng?</p>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+			<ul>
+				<li>Sự lặp lại dễ tạo ảo giác chắc chắn, khiến “thường đúng” bị hiểu thành “luôn đúng”.</li>
+				<li>Thói quen là xu hướng ổn định, không phải cam kết tuyệt đối (ví dụ Kyle).</li>
+				<li>Kinh nghiệm là dữ liệu, không phải chân lý; cần kiểm chứng trong bối cảnh hiện tại.</li>
+				<li>Trong hệ thống lớn, sai lệch nhỏ có thể dẫn đến hậu quả lớn.</li>
+				<li>“Khuynh hướng thường gặp” dễ bị biến thành “quy luật chắc chắn”.</li>
+				<li>Cần giữ khoảng cách tỉnh táo: kinh nghiệm là điểm khởi đầu, không phải kết thúc.</li>
+				<li>Thực hành: phân biệt điều “thường đúng” và điều đang bị xem như “luôn đúng”.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+				<pre class="mm-text-tree">
+6. CẠM BẪY THƯỜNG ĐÚNG VÀ LUÔN LUÔN ĐÚNG
+├─ Luận điểm trung tâm
+│  └─ “Thường đúng” bị nhầm thành “luôn đúng” khi thiếu cảnh giác
+│
+├─ 1) Sự lặp lại tạo ảo giác chắc chắn
+│  └─ Kinh nghiệm lặp lại → cảm giác đúng tuyệt đối
+│
+├─ 2) Ví dụ đời thường
+│  ├─ Kyle thường đến lúc 8h
+│  └─ Thói quen ≠ cam kết tuyệt đối
+│
+├─ 3) Kinh nghiệm là dữ liệu
+│  ├─ Hữu ích để đặt giả thuyết
+│  └─ Không thay thế kiểm chứng hiện tại
+│
+├─ 4) Hệ thống lớn, cái giá lớn
+│  ├─ Quá khứ ổn định → dễ chủ quan
+│  └─ Biến động bất thường gây hậu quả lớn
+│
+├─ 5) Khuynh hướng thành quy luật
+│  ├─ “Đọc vị” con người dễ bị áp dụng cứng
+│  └─ Con người đa dạng, bối cảnh thay đổi
+│
+└─ 6) Tự kiểm tra
+   └─ Phân biệt điều thường đúng và điều bị xem như luôn đúng
+				</pre>
+			</details>
+		</div>
+
 	</section>
 </article>
 
