--- a/pages/writing-opinion/values-creation/6-2-2-common-traps-in-value-creation-common-traps-2.html
+++ b/pages/writing-opinion/values-creation/6-2-2-common-traps-in-value-creation-common-traps-2.html
@@ -69,6 +69,54 @@
 			<p>Read each statement slowly and ask: what in these arguments is often true, and what is being implicitly treated as always true?</p>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Outline summary notes</h3>
+			<ul>
+				<li>Repetition can create an illusion of certainty, turning “often true” into “always true.”</li>
+				<li>Habits are stable tendencies, not absolute commitments (Kyle example).</li>
+				<li>Experience is data, not truth; it needs verification in the current context.</li>
+				<li>In large systems, small deviations can lead to large consequences.</li>
+				<li>“Common tendencies” can be mistaken for “certain rules.”</li>
+				<li>Keep a clear distance: experience is a starting point, not an endpoint.</li>
+				<li>Practice distinguishing what is often true from what is treated as always true.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Text mind map (tree)</summary>
+				<pre class="mm-text-tree">
+6. THE “OFTEN TRUE” VS “ALWAYS TRUE” TRAP
+├─ Central claim
+│  └─ “Often true” is mistaken for “always true” when vigilance drops
+│
+├─ 1) Repetition creates an illusion of certainty
+│  └─ Familiar success feels like full verification
+│
+├─ 2) Everyday example
+│  ├─ Kyle often arrives at 8 a.m.
+│  └─ Habit ≠ absolute commitment
+│
+├─ 3) Experience is data
+│  ├─ Useful for hypotheses
+│  └─ Not a substitute for present verification
+│
+├─ 4) Large systems, larger costs
+│  ├─ Past stability → complacency
+│  └─ Abnormal shifts can cause big consequences
+│
+├─ 5) Tendencies turned into rules
+│  ├─ “Reading people” applied rigidly
+│  └─ People change with context and time
+│
+└─ 6) Self-check
+   └─ Distinguish often true from always true
+				</pre>
+			</details>
+		</div>
+
 	</section>
 </article>
 
