--- a/pages/writing-opinion/values-creation/6-2-3-common-traps-in-value-creation-common-traps-3-vn.html
+++ b/pages/writing-opinion/values-creation/6-2-3-common-traps-in-value-creation-common-traps-3-vn.html
@@ -59,6 +59,49 @@
 			</ul>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+			<ul>
+				<li>Sự trùng hợp lặp lại dễ bị hiểu thành quan hệ nhân quả.</li>
+				<li>Tương quan không đủ để kết luận nguyên nhân.</li>
+				<li>Dậy sớm/đọc sách là biểu hiện, không chắc là yếu tố quyết định.</li>
+				<li>Cần phân biệt điều kiện cần và điều kiện đủ.</li>
+				<li>Lỗi đảo chiều: A ⇒ B không đồng nghĩa B ⇒ A.</li>
+				<li>Kết quả thường là tổng hợp nhiều điều kiện, không chỉ một yếu tố dễ thấy.</li>
+				<li>Tự kiểm tra giúp nhận diện tương quan và nhân quả trong các nhận định quen thuộc.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+				<pre class="mm-text-tree">
+6. CẠM BẪY TƯƠNG QUAN VÀ NHÂN QUẢ
+├─ Luận điểm trung tâm
+│  └─ Cùng xuất hiện không đồng nghĩa với nguyên nhân
+│
+├─ 1) Sự trùng hợp lặp lại bị hiểu thành nguyên nhân
+│  └─ Câu chuyện nhân quả nghe có vẻ thuyết phục
+│
+├─ 2) Biểu hiện bề mặt bị nhầm thành yếu tố quyết định
+│  ├─ Dậy sớm, đọc sách ↔ thành công, tư duy tốt
+│  └─ Thường là điều kiện cần, không phải điều kiện đủ
+│
+├─ 3) Lỗi đảo chiều nhân quả
+│  ├─ A ⇒ B không đồng nghĩa B ⇒ A
+│  └─ Ví dụ học thêm/học giỏi, công cụ/năng suất
+│
+├─ 4) Hệ quả của nhầm lẫn
+│  └─ Tối ưu nhầm chỗ, đầu tư sai yếu tố
+│
+└─ 5) Tự kiểm tra
+   └─ Phân biệt tương quan và nhân quả trong các nhận định
+				</pre>
+			</details>
+		</div>
+
 	</section>
 </article>
 
