--- a/pages/writing-opinion/values-creation/6-2-3-common-traps-in-value-creation-common-traps-3.html
+++ b/pages/writing-opinion/values-creation/6-2-3-common-traps-in-value-creation-common-traps-3.html
@@ -59,6 +59,49 @@
 			</ul>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Outline summary notes</h3>
+			<ul>
+				<li>Repeated co-occurrence can be mistaken for causation.</li>
+				<li>Correlation alone is not enough to conclude cause.</li>
+				<li>Early rising/reading are surface signals, not necessarily decisive factors.</li>
+				<li>Distinguish necessary conditions from sufficient conditions.</li>
+				<li>Reversal error: A ⇒ B does not mean B ⇒ A.</li>
+				<li>Outcomes usually result from multiple converging conditions.</li>
+				<li>Self-check helps separate correlation from causation in familiar claims.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Text mind map (tree)</summary>
+				<pre class="mm-text-tree">
+6. THE CORRELATION AND CAUSATION TRAP
+├─ Central claim
+│  └─ Co-occurrence does not mean cause
+│
+├─ 1) Repeated coincidence → “cause” story
+│  └─ Persuasive but often shallow
+│
+├─ 2) Surface signals mistaken for decisive factors
+│  ├─ Early rising, reading ↔ success, good thinking
+│  └─ Often necessary, rarely sufficient
+│
+├─ 3) Reversal error
+│  ├─ A ⇒ B does not mean B ⇒ A
+│  └─ Examples: tutoring/achievement, tool/productivity
+│
+├─ 4) Consequences of confusion
+│  └─ Optimize the wrong factors; misdirected effort
+│
+└─ 5) Self-check
+   └─ Distinguish correlation from causation in common claims
+				</pre>
+			</details>
+		</div>
+
 	</section>
 </article>
 
