--- a/pages/writing-opinion/values-creation/6-2-4-common-traps-in-value-creation-common-traps-4-vn.html
+++ b/pages/writing-opinion/values-creation/6-2-4-common-traps-in-value-creation-common-traps-4-vn.html
@@ -63,6 +63,53 @@
 			</ul>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+			<ul>
+				<li>Thiên kiến xác nhận khiến tư duy chuyển từ “khám phá” sang “bảo vệ”.</li>
+				<li>Thông tin phù hợp được giữ lại; thông tin mâu thuẫn bị bỏ qua hoặc diễn giải lại.</li>
+				<li>Thiên kiến xuất hiện sau khi niềm tin ban đầu hình thành.</li>
+				<li>Biểu hiện đời thường: cách làm hiệu quả → tin đúng tuyệt đối; ấn tượng về người khác → thành “sự thật”.</li>
+				<li>Các cạm bẫy nối tiếp nhau tạo chuỗi từ tương quan → nhân quả → xác nhận.</li>
+				<li>Tác hại: kiên trì với sai lầm, bỏ qua tín hiệu cảnh báo.</li>
+				<li>Giữ khoảng cách tỉnh táo với kết luận; chủ động tìm phản chứng.</li>
+				<li>Tự kiểm tra điều mình chú ý và điều mình bỏ qua.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+				<pre class="mm-text-tree">
+6. CẠM BẪY THIÊN KIẾN XÁC NHẬN
+├─ Luận điểm trung tâm
+│  └─ Ta chỉ nhìn thấy điều củng cố cho niềm tin đã có
+│
+├─ 1) Cơ chế: tư duy chuyển từ “khám phá” sang “bảo vệ”
+│  └─ Chọn lọc thông tin để củng cố niềm tin
+│
+├─ 2) Biểu hiện đời thường
+│  ├─ Phương pháp hiệu quả → tin đúng tuyệt đối
+│  └─ Ấn tượng ban đầu về người khác → thành “sự thật”
+│
+├─ 3) Chuỗi liên kết các cạm bẫy
+│  └─ Thường đúng → nhân quả → xác nhận
+│
+├─ 4) Tác hại trong tạo giá trị
+│  ├─ Kiên trì với sai lầm
+│  └─ Bỏ qua phản hồi và tín hiệu cảnh báo
+│
+├─ 5) Cách nhận diện
+│  └─ Giữ khoảng cách tỉnh táo, tìm phản chứng
+│
+└─ 6) Tự kiểm tra
+   └─ Nhìn xem điều gì được chú ý và điều gì bị bỏ qua
+				</pre>
+			</details>
+		</div>
+
 	</section>
 </article>
 
