--- a/pages/writing-opinion/values-creation/6-2-4-common-traps-in-value-creation-common-traps-4.html
+++ b/pages/writing-opinion/values-creation/6-2-4-common-traps-in-value-creation-common-traps-4.html
@@ -63,6 +63,53 @@
 			</ul>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Outline summary notes</h3>
+			<ul>
+				<li>Confirmation bias shifts thinking from “exploring” to “defending.”</li>
+				<li>Fitting information is emphasized; conflicting information is ignored or reinterpreted.</li>
+				<li>The bias appears after an initial belief is formed.</li>
+				<li>Everyday signs: methods that “work,” first impressions of people.</li>
+				<li>Traps can chain: often true → causation → confirmation.</li>
+				<li>Harm: persistence in error and missed adjustment opportunities.</li>
+				<li>Keep distance from conclusions; seek counterevidence.</li>
+				<li>Self-check what is noticed and what is overlooked.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Text mind map (tree)</summary>
+				<pre class="mm-text-tree">
+6. THE CONFIRMATION BIAS TRAP
+├─ Central claim
+│  └─ We see what confirms what we already believe
+│
+├─ 1) Mechanism: from exploring to defending
+│  └─ Selective intake of information
+│
+├─ 2) Everyday expressions
+│  ├─ A method “works” → belief reinforced
+│  └─ First impressions → fixed “truth” about people
+│
+├─ 3) Chain of traps
+│  └─ Often true → causation → confirmation
+│
+├─ 4) Harm in value creation
+│  ├─ Persist in error
+│  └─ Ignore warnings and opposing feedback
+│
+├─ 5) Recognition
+│  └─ Keep distance, seek counterevidence
+│
+└─ 6) Self-check
+   └─ What is noticed vs what is overlooked
+				</pre>
+			</details>
+		</div>
+
 	</section>
 </article>
 
