--- a/pages/writing-opinion/values-creation/6-2-5-common-traps-in-value-creation-common-traps-5-vn.html
+++ b/pages/writing-opinion/values-creation/6-2-5-common-traps-in-value-creation-common-traps-5-vn.html
@@ -69,6 +69,53 @@
 			</ul>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+			<ul>
+				<li>Ta chỉ thấy những gì còn lại sau sàng lọc, nên bức tranh bị thiếu.</li>
+				<li>Thiên kiến sống sót làm lệch tập dữ kiện ngay từ đầu.</li>
+				<li>Đặc điểm của người sống sót dễ bị nhầm thành nguyên nhân thành công.</li>
+				<li>Thiên kiến sống sót kết hợp thiên kiến xác nhận tạo vòng lặp niềm tin.</li>
+				<li>Hệ quả: học sai bài học, tối ưu dựa trên bức tranh không đầy đủ.</li>
+				<li>Cần đặt câu hỏi về những gì không còn được nhìn thấy.</li>
+				<li>Những nhận định “hiển nhiên” cần soi lại qua lăng kính sống sót.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+				<pre class="mm-text-tree">
+6. CẠM BẪY THIÊN KIẾN SỐNG SÓT
+├─ Luận điểm trung tâm
+│  └─ Chỉ thấy người còn lại khiến ta quên người đã biến mất
+│
+├─ 1) Hiện tượng: ta học từ phần còn thấy được
+│  └─ Câu chuyện thành công che khuất phần thất bại
+│
+├─ 2) Cơ chế: dữ liệu bị lệch ngay từ đầu
+│  └─ Thất bại biến mất khỏi tầm nhìn
+│
+├─ 3) Sai lầm suy luận
+│  └─ Nhầm đặc điểm đi kèm với nguyên nhân
+│
+├─ 4) Kết hợp với thiên kiến xác nhận
+│  └─ Vòng lặp niềm tin dựa trên ví dụ đã sàng lọc
+│
+├─ 5) Hệ quả trong tạo giá trị
+│  └─ Học sai bài học, tối ưu sai yếu tố
+│
+├─ 6) Cách tiếp cận tỉnh táo
+│  └─ Hỏi: ai không thành công? điều gì không được kể?
+│
+└─ 7) Ví dụ gợi mở
+   └─ Những nhận định “hiển nhiên” cần soi lại
+				</pre>
+			</details>
+		</div>
+
 	</section>
 </article>
 <script src="settings.js"></script>
