--- a/pages/writing-opinion/values-creation/6-2-5-common-traps-in-value-creation-common-traps-5.html
+++ b/pages/writing-opinion/values-creation/6-2-5-common-traps-in-value-creation-common-traps-5.html
@@ -69,6 +69,53 @@
 			</ul>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Outline summary notes</h3>
+			<ul>
+				<li>We only see what remains after filtering, so the picture is incomplete.</li>
+				<li>Survivorship bias distorts the dataset from the start.</li>
+				<li>Survivor traits are often mistaken for causes of success.</li>
+				<li>Combined with confirmation bias, it reinforces fixed beliefs.</li>
+				<li>Consequence: learning wrong lessons and optimizing the wrong factors.</li>
+				<li>Ask about what is no longer visible to regain context.</li>
+				<li>“Self-evident” statements should be rechecked through survivorship bias.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Text mind map (tree)</summary>
+				<pre class="mm-text-tree">
+6. THE SURVIVORSHIP BIAS TRAP
+├─ Central claim
+│  └─ We see only survivors and forget what disappeared
+│
+├─ 1) Phenomenon: learning from what remains
+│  └─ Success stories hide failures
+│
+├─ 2) Mechanism: biased data from the start
+│  └─ Failures disappear from view
+│
+├─ 3) Reasoning error
+│  └─ Survivor traits ≠ causes of success
+│
+├─ 4) Combined with confirmation bias
+│  └─ A loop that reinforces belief
+│
+├─ 5) Consequences in value creation
+│  └─ Wrong lessons, wrong optimizations
+│
+├─ 6) A mindful approach
+│  └─ Ask: who didn’t succeed? what was not told?
+│
+└─ 7) Prompting examples
+   └─ “Self-evident” statements need rechecking
+				</pre>
+			</details>
+		</div>
+
 	</section>
 </article>
 <script src="settings.js"></script>
