--- a/pages/writing-opinion/values-creation/6-2-6-common-traps-in-value-creation-common-traps-6-vn.html
+++ b/pages/writing-opinion/values-creation/6-2-6-common-traps-in-value-creation-common-traps-6-vn.html
@@ -55,6 +55,49 @@
 			<p>Cảm xúc làm cho đời sống trở nên muôn màu và có chiều sâu. Nhưng chỉ khi biết sử dụng nó một cách tỉnh táo, ta mới để cảm xúc làm giàu trải nghiệm, thay vì để nó âm thầm dẫn dắt và chi phối phán đoán của mình.</p>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+			<ul>
+				<li>Cảm xúc thường đi trước lý trí và dễ bị xem như sự thật.</li>
+				<li>Cùng sự kiện nhưng cảm xúc khác nhau → phán đoán khác nhau.</li>
+				<li>Ta phản ứng với câu chuyện mình kể, không phải sự kiện thuần túy.</li>
+				<li>“Cảm thấy đúng” tạo ảo giác chắc chắn và giảm kiểm tra lại.</li>
+				<li>Quyết định đúng cảm giác có thể sai hướng và kém bền vững.</li>
+				<li>Cần đặt cảm xúc đúng vị trí để không chi phối phán đoán.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+				<pre class="mm-text-tree">
+6. CẠM BẪY CẢM XÚC
+├─ Luận điểm trung tâm
+│  └─ Cảm giác dễ bị nhầm lẫn với sự thật
+│
+├─ 1) Hiện tượng: cảm xúc đi trước hiểu biết
+│  └─ Phán đoán trượt khỏi bản chất sự việc
+│
+├─ 2) Ví dụ: cùng sự kiện, phản ứng khác
+│  └─ Chuột/gián vs chim nhỏ → cảm xúc khác nhau
+│
+├─ 3) Cơ chế: diễn giải thay thế quan sát
+│  └─ Phán đoán lệch vì khung diễn giải
+│
+├─ 4) Ảo giác “cảm thấy đúng”
+│  └─ Cảm xúc mạnh → ít nghi ngờ, ít kiểm tra
+│
+├─ 5) Hệ quả trong tạo giá trị
+│  └─ Quyết định đúng cảm giác nhưng sai hướng
+│
+└─ 6) Khoảng dừng tỉnh táo
+   └─ Đặt cảm xúc đúng vị trí để làm giàu trải nghiệm
+				</pre>
+			</details>
+		</div>
+
 	</section>
 </article>
 <script src="settings.js"></script>
