--- a/pages/writing-opinion/values-creation/6-2-6-common-traps-in-value-creation-common-traps-6.html
+++ b/pages/writing-opinion/values-creation/6-2-6-common-traps-in-value-creation-common-traps-6.html
@@ -55,6 +55,49 @@
 			<p>Emotion makes life rich and deep. But only when we use it with awareness can it enrich experience, rather than quietly guide and dominate our judgment.</p>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Outline summary notes</h3>
+			<ul>
+				<li>Emotions often come before reason and are treated as truth.</li>
+				<li>The same event can trigger opposite judgments based on emotion.</li>
+				<li>We react to interpretations, not pure events.</li>
+				<li>“Feeling right” creates an illusion of certainty and reduces rechecking.</li>
+				<li>Emotion-led decisions may feel right but be unsustainable.</li>
+				<li>Keep emotion in its proper place to enrich, not dominate, judgment.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Text mind map (tree)</summary>
+				<pre class="mm-text-tree">
+6. THE EMOTIONAL TRAP
+├─ Central claim
+│  └─ Feelings are often mistaken for truth
+│
+├─ 1) Phenomenon: emotion before understanding
+│  └─ Judgment drifts from the essence of events
+│
+├─ 2) Same event, opposite judgments
+│  └─ Different emotions flip our conclusions
+│
+├─ 3) Mechanism: interpretation replaces reality
+│  └─ Stories shape emotions, not events themselves
+│
+├─ 4) Illusion of “feeling right”
+│  └─ Strong emotion reduces doubt and checking
+│
+├─ 5) Consequence in value creation
+│  └─ Decisions feel right but head the wrong way
+│
+└─ 6) A mindful pause
+   └─ Keep emotion in its proper place to enrich judgment
+				</pre>
+			</details>
+		</div>
+
 	</section>
 </article>
 <script src="settings.js"></script>
