--- a/pages/writing-opinion/values-creation/6-2-7-common-traps-in-value-creation-common-traps-7-vn.html
+++ b/pages/writing-opinion/values-creation/6-2-7-common-traps-in-value-creation-common-traps-7-vn.html
@@ -111,6 +111,41 @@
 			</p>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+			<ul>
+				<li>Thiên kiến neo: phụ thuộc quá mức vào thông tin đầu tiên.</li>
+				<li>Hiệu ứng đóng khung: cách trình bày làm đổi quyết định.</li>
+				<li>Tư duy đám đông: tin đúng vì số đông tin.</li>
+				<li>Thiên kiến nhìn lại: nghĩ “lẽ ra đã biết”.</li>
+				<li>Thiên kiến lạc quan: đánh giá thấp rủi ro cho bản thân.</li>
+				<li>Thiên kiến hiện trạng: bám vào cái quen thuộc.</li>
+				<li>Tự tin quá mức: đánh giá cao khả năng kiểm soát.</li>
+				<li>Hiệu ứng hào quang: suy rộng từ ấn tượng ban đầu.</li>
+				<li>Nhận thức chọn lọc: chỉ thấy điều củng cố niềm tin.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+				<pre class="mm-text-tree">
+6. CẠM BẪY TƯ DUY
+├─ Thiên kiến neo (Anchoring Bias)
+├─ Hiệu ứng đóng khung (Framing Effect)
+├─ Tư duy đám đông (Bandwagon Effect)
+├─ Thiên kiến nhìn lại (Hindsight Bias)
+├─ Thiên kiến lạc quan (Optimism Bias)
+├─ Thiên kiến hiện trạng (Status Quo Bias)
+├─ Thiên kiến tự tin quá mức (Overconfidence Bias)
+├─ Hiệu ứng hào quang (Halo Effect)
+└─ Nhận thức chọn lọc (Selective Perception)
+				</pre>
+			</details>
+		</div>
+
 	</section>
 
 </article>
