--- a/pages/writing-opinion/values-creation/6-2-7-common-traps-in-value-creation-common-traps-7.html
+++ b/pages/writing-opinion/values-creation/6-2-7-common-traps-in-value-creation-common-traps-7.html
@@ -111,6 +111,41 @@
 			</p>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Outline summary notes</h3>
+			<ul>
+				<li>Anchoring bias: over-reliance on first information.</li>
+				<li>Framing effect: presentation changes decisions.</li>
+				<li>Bandwagon effect: believing because many do.</li>
+				<li>Hindsight bias: “should have known” after the fact.</li>
+				<li>Optimism bias: underestimating risks for oneself.</li>
+				<li>Status quo bias: sticking to the familiar.</li>
+				<li>Overconfidence bias: overestimating control or skill.</li>
+				<li>Halo effect: generalizing from a first impression.</li>
+				<li>Selective perception: seeing only belief-consistent data.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Text mind map (tree)</summary>
+				<pre class="mm-text-tree">
+6. THINKING TRAPS
+├─ Anchoring Bias
+├─ Framing Effect
+├─ Bandwagon Effect
+├─ Hindsight Bias
+├─ Optimism Bias
+├─ Status Quo Bias
+├─ Overconfidence Bias
+├─ Halo Effect
+└─ Selective Perception
+				</pre>
+			</details>
+		</div>
+
 	</section>
 
 </article>
